# redsync

./: LICENSE  MANIFEST.in  README.md  project.code-workspace  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
src/redsync/: __init__.py  exceptions.py  semaphore.py
src/redsync/lua_scripts/: init_semaphore.lua
tests/: conftest.py  test_semaphore.py
